--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && next build",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
