--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/formidable": "^3.4.5",
     "@types/pg": "^8.15.2",
     "axios": "^1.9.0",
