--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.5.0",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "next": "15.3.2",
     "pg": "^8.16.0",
     "react": "^19.0.0",
