--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
